# byte_coding

./: Cargo.toml  README.md
byte_coding_derive/: Cargo.toml
byte_coding_derive/src/: byte_coding_attr.rs  decoding.rs  encoding.rs  lib.rs  parsing.rs
src/: coder.rs  decodable.rs  encodable.rs  lib.rs
tests/: derive_test.rs
